Alignment fixes

--- a/src/styles/views/Header.scss
+++ b/src/styles/views/Header.scss
@@ -7,6 +7,7 @@
     padding-right: 10%;
     padding-top: 2%;
     padding-bottom: 2%;
+    min-height: 14vh;
     align-items: center;
     display: flex;
     flex-direction: row;
